# server.js
@@ -7,7 +7,7 @@ const GitHubStrategy = require('passport-github2').Strategy;
 const cors = require('cors');
 
 const app = express();
-const port = process.env.PORT || 3001;
+const port = process.env.PORT || 3100;
 
 app
     .use(bodyParser.json())
